--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,6 @@ data:
         - ~/.composer:/root/.composer
         - /tmpfs
 
-# nginx:
-#     image: nginx
-#     links:
-#         - php
-#     volumes_from:
-#         - data
-#     volumes:
-#         - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-#     ports:
-#         - 80:80
-#         - 443:443
-
 mysql:
     image: mariadb
     environment:
@@ -38,7 +26,7 @@ php:
         - memcached
     ports:
         - 8000:8000
-    mem_limit: 2000000000
+    mem_limit: 2g
     command: bin/console server:start 0.0.0.0:8000
 
 node:
@@ -55,6 +43,3 @@ elasticsearch:
 
 memcached:
     image: memcached
-
-# selenium:
-#     image: selenium/standalone-chrome-debug
